# Ros2-Sonoma-Driver

./: LICENSE  README.md
src/four_wheels_robot/: CMakeLists.txt  package.xml  setup.py
src/four_wheels_robot/config/: baseRvizConfig.rviz  gazeboconfiguration.config
src/four_wheels_robot/launch/: keyboard.launch.py  robotxacroLaunch.py  ros_gzSim.py
src/four_wheels_robot/src/: camera_publisher_cpp.cpp  camera_subscriber_cpp.cpp  car_velocity_publisher.cpp  controller  controller.cpp  keyboard_publisher.cpp
src/four_wheels_robot/urdf/: camera.xacro  inertial_commons.xacro  model.urdf  robot.xacro
src/four_wheels_robot/worlds/: grass_track.sdf   sonoma.sdf
src/four_wheels_robot_nn/: attempt.py  package.xml  setup.cfg  setup.py
src/four_wheels_robot_nn/four_wheels_robot_nn/: controller_node.py  data_gather_node.py  image_processing.py  testing.py  training.py  training_supervised.py
src/four_wheels_robot_nn/launch/: launch.launch.py  launch_readmove.launch.py
